# crabstore

./: .gitignore  Cargo.toml  Makefile  README.md
crates/crabstore-client/: Cargo.toml
crates/crabstore-client/examples/: demo.rs  test_python_client.py
crates/crabstore-client/src/: allocator.rs  client.rs  client2.rs  lib.rs  rust_2_py.rs  status.rs
crates/crabstore-common/: Cargo.toml
crates/crabstore-common/src/: lib.rs  message.proto  messages.rs  objecthandle.rs  objectid.rs  status.rs
crates/crabstore-python-client/: Cargo.toml  pyproject.toml
crates/crabstore-python-client/examples/: demo.rs  test_python_client.py
crates/crabstore-python-client/src/: async_client.rs  lib.rs  pyclient.rs  status.rs
crates/crabstore-server/: Cargo.toml
crates/crabstore-server/src/: allocator.rs  main.rs  runner.rs  store.rs
