[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.80"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Satyam Jay"]
repository = "https://github.com/rust-lang/rust-analyzer"


[workspace.lints.rust]

[workspace.lints.clippy]

[workspace.dependencies]
log = "0.4"
env_logger = "0.11.5"
prost = "0.13"
prost-types = "0.13"
