[package]
name = "crabstore-client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "crabstore_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
crabstore-common = {path = "../crabstore-common"}
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

[build-dependencies]
prost-build = "0.13"


[lints]
workspace = true

[[example]]
name = "demo"
path = "examples/demo.rs"
