[package]
name = "crabstore-client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "crabstore_client"
crate-type = ["cdylib", "rlib"]

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2", default-features = false }

[dependencies]
crabstore-common = {path = "../crabstore-common"}
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio-serde = "0.9"
bytes.workspace = true
nix = { version = "0.29.0", features = ["fs", "mman"] }
# dlmalloc = { path = "../../../dlmalloc-rs-upstream"}
dlmalloc = { git = "https://github.com/satyamjay-iitd/dlmalloc-rs"}
env_logger.workspace = true

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true

[[example]]
name = "demo"
path = "examples/demo.rs"
