[package]
name = "crabstore-common"
version = "0.0.1"
repository.workspace = true
description = "Components that are common in both server and client"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tokio-util.workspace = true

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true
