[package]
name = "crabstore-python-client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "crabstore_python_client"
crate-type = ["cdylib", "rlib"]

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2", default-features = false }

[dependencies]
crabstore-common = {path = "../crabstore-common"}
crabstore-client = {path = "../crabstore-client"}
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio-serde = "0.9"
bytes.workspace = true
pyo3 = { version = "0.22.2", features = ["extension-module"] }
nix = { version = "0.29.0", features = ["fs", "mman"] }
dlmalloc = { git = "https://github.com/satyamjay-iitd/dlmalloc-rs"}

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true
