[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "crabstore_python_client"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
