[package]
name = "crabstore-store"
version = "0.0.1"
repository.workspace = true
description = "Server for storing and sharing large binary object"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.15", features = ["derive", "cargo"] }
crabstore-common = {path = "../crabstore-common"}
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
bytes.workspace = true
env_logger.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true
